# whirr

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  cliff.toml  flake.nix
.github/workflows/: ci.yml  release.yml
assets/: io.github.samuelb.gibbon.desktop  io.github.samuelb.whirr.desktop
assets/icons/: whirr.icns
packaging/: nfpm.yaml
packaging/arch/: PKGBUILD
packaging/homebrew/: whirr.rb
packaging/homebrew/Casks/: whirr.rb
packaging/homebrew/Formula/: whirr.rb
packaging/macos/: Info.plist  bundle.sh
packaging/windows/: installer.nsi
scripts/: bump-version.sh  check-version-metadata.sh  stage-arch-release.sh  stage-homebrew-cask.sh  stage-homebrew.sh
src/: app.rs  autostart.rs  config.rs  controls.rs  dialog.rs  icons.rs  icy.rs  main.rs  notifications.rs  player.rs  playlist.rs  tray.rs  util.rs
