[package]
name = "whirr"
version = "0.3.0"
edition = "2021"
rust-version = "1.89"
description = "A tiny system-tray player for internet radio (MP3) streams."
authors = ["Whirr contributors"]
license = "MIT"
repository = "https://github.com/samuelb/whirr"
homepage = "https://github.com/samuelb/whirr"
readme = "README.md"
keywords = ["radio", "tray", "mpris", "streaming", "audio"]
categories = ["multimedia::audio"]
exclude = ["/.github", "/packaging", "/assets/whirr.iconset"]

[[bin]]
name = "whirr"
path = "src/main.rs"

[dependencies]
# Audio: pure-Rust HTTP streaming + MP3 decode + playback (no gstreamer dependency).
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rodio = { version = "0.20", default-features = false }
symphonia = { version = "0.5", default-features = false, features = ["mp3", "aac"] }

# Tray icon + event loop (cross-platform: Windows, macOS, Linux).
tray-icon = "0.19"
tao = "0.30"
image = { version = "0.25", default-features = false, features = ["png"] }

# System media controls: MPRIS (Linux) / SMTC (Windows) / MediaRemote (macOS) + media keys.
# `use_zbus` selects the pure-Rust D-Bus backend on Linux so no libdbus build dep is needed.
souvlaki = { version = "0.7", default-features = false, features = ["use_zbus"] }
raw-window-handle = "0.6"

# Start-on-login registration across platforms.
auto-launch = "0.5"

# Desktop "now playing" notifications on track change.
# The `z` feature (the crate's default) selects the pure-Rust zbus D-Bus backend
# on Linux — matching souvlaki above, so no libdbus build dep is pulled in.
# macOS (mac-notification-sys) and Windows (WinRT toast) backends are automatic.
notify-rust = { version = "4", default-features = false, features = ["z"] }

# Config, logging, utilities.
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"

# The stream-URL dialog on Linux is a plain GTK3 dialog — GTK is already
# linked there via tao/tray-icon, so this adds no new system dependency.
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# ---------------------------------------------------------------------------
# Packaging metadata
# ---------------------------------------------------------------------------

# cargo-deb (Debian/Ubuntu .deb)
[package.metadata.deb]
maintainer = "Whirr contributors"
copyright = "2026, Whirr contributors"
license-file = ["LICENSE-MIT", "0"]
extended-description = """\
A lightweight system-tray player for internet radio (MP3) streams. \
Plays a user-configured stream URL with one-click play/pause, now-playing \
tooltip, MPRIS and media-key integration, and automatic reconnect."""
section = "sound"
priority = "optional"
depends = "$auto, libgtk-3-0, libayatana-appindicator3-1, libasound2"
assets = [
    ["target/release/whirr", "usr/bin/", "755"],
    ["assets/icons/whirr.png", "usr/share/icons/hicolor/256x256/apps/io.github.samuelb.whirr.png", "644"],
    ["assets/io.github.samuelb.whirr.desktop", "usr/share/applications/", "644"],
    ["README.md", "usr/share/doc/whirr/README.md", "644"],
]

# cargo-generate-rpm (Fedora/RHEL/openSUSE .rpm)
[package.metadata.generate-rpm]
summary = "System-tray player for internet radio (MP3) streams"
license = "MIT"
assets = [
    { source = "target/release/whirr", dest = "/usr/bin/whirr", mode = "755" },
    { source = "assets/icons/whirr.png", dest = "/usr/share/icons/hicolor/256x256/apps/io.github.samuelb.whirr.png", mode = "644" },
    { source = "assets/io.github.samuelb.whirr.desktop", dest = "/usr/share/applications/io.github.samuelb.whirr.desktop", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/whirr/README.md", mode = "644" },
]
[package.metadata.generate-rpm.requires]
gtk3 = "*"
libappindicator-gtk3 = "*"
alsa-lib = "*"

# cargo-bundle (macOS .app / .dmg convenience — CI uses the manual bundler in packaging/macos)
[package.metadata.bundle]
name = "Whirr"
identifier = "io.github.samuelb.whirr"
icon = ["assets/icons/whirr.icns"]
category = "Music"
short_description = "System-tray player for internet radio streams."
long_description = """\
A lightweight system-tray player for internet radio (MP3) streams. \
Plays a user-configured stream URL."""
